--- a/201130_week5_FinalProject/201130_week5_FinalProject/Info.plist
+++ b/201130_week5_FinalProject/201130_week5_FinalProject/Info.plist
@@ -5,7 +5,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>NerkoOne-Regular.ttf</string>
-		<string></string>
+		<string>HiMelody-Regular.ttf</string>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
